--- a/src/main/resources/themes/default/games.fxml
+++ b/src/main/resources/themes/default/games.fxml
@@ -15,75 +15,57 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox fx:id="gamesRoot" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity"
-      minWidth="0.0" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1"
-      fx:controller="com.faforever.client.game.GamesController">
+<VBox fx:id="gamesRoot" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.faforever.client.game.GamesController">
   <children>
-    <HBox alignment="BASELINE_LEFT" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="0.0"
-          minWidth="0.0" spacing="10.0">
+    <HBox alignment="BASELINE_LEFT" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" spacing="10.0">
       <children>
-        <Button fx:id="createGameButton" mnemonicParsing="false" onAction="#onCreateGameButtonClicked"
-                text="%games.create"/>
-        <CheckBox mnemonicParsing="false" onAction="#onShowPrivateGames" selected="true"
-                  text="%games.showPrivateGames"/>
+        <Button fx:id="createGameButton" mnemonicParsing="false" onAction="#onCreateGameButtonClicked" text="%games.create" />
+        <CheckBox mnemonicParsing="false" onAction="#onShowPrivateGames" selected="true" text="%games.showPrivateGames" />
       </children>
     </HBox>
-    <HBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="0.0" minWidth="0.0"
-          VBox.vgrow="ALWAYS">
+    <HBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" VBox.vgrow="ALWAYS">
       <children>
-        <VBox fx:id="gamePreviewPanel" maxHeight="1.7976931348623157E308" minHeight="0.0" minWidth="-Infinity"
-              prefWidth="263.0">
+        <VBox fx:id="gamePreviewPanel" maxHeight="1.7976931348623157E308">
           <children>
-            <HBox alignment="CENTER" maxHeight="1.7976931348623157E308" VBox.vgrow="NEVER">
-              <children>
-                <ImageView fx:id="mapImageView" fitHeight="256.0" fitWidth="256.0" pickOnBounds="true"
-                           preserveRatio="true" HBox.hgrow="NEVER">
-                  <HBox.margin>
-                    <Insets bottom="10.0"/>
-                  </HBox.margin>
-                </ImageView>
-              </children>
-            </HBox>
-            <Label fx:id="gameTitleLabel" maxHeight="1.7976931348623157E308" styleClass="game-detail-title"
-                   text="&lt;Game title&gt;">
+          <ImageView fx:id="mapImageView" fitWidth="256.0" pickOnBounds="true" preserveRatio="true" />
+            <Label fx:id="gameTitleLabel" maxHeight="1.7976931348623157E308" styleClass="game-detail-title" text="&lt;Game title&gt;">
               <padding>
-                <Insets left="10.0"/>
+                <Insets left="10.0" />
               </padding>
             </Label>
             <Label fx:id="numberOfPlayersLabel" maxHeight="1.7976931348623157E308" text="&lt;Number of players&gt;">
               <padding>
-                <Insets left="10.0"/>
+                <Insets left="10.0" />
               </padding>
             </Label>
             <Label fx:id="hosterLabel" maxHeight="1.7976931348623157E308" text="&lt;Hoster&gt;">
               <VBox.margin>
-                <Insets top="10.0"/>
+                <Insets top="10.0" />
               </VBox.margin>
               <padding>
-                <Insets left="10.0"/>
+                <Insets left="10.0" />
               </padding>
             </Label>
             <Label fx:id="gameModeLabel" maxHeight="1.7976931348623157E308" text="&lt;Game mode&gt;">
               <VBox.margin>
-                <Insets top="10.0"/>
+                <Insets top="10.0" />
               </VBox.margin>
               <padding>
-                <Insets left="10.0"/>
+                <Insets left="10.0" />
               </padding>
             </Label>
           </children>
         </VBox>
-        <TableView fx:id="gamesTable" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308"
-                   onMouseClicked="#onTableClicked" HBox.hgrow="ALWAYS">
+        <TableView fx:id="gamesTable" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" onMouseClicked="#onTableClicked" HBox.hgrow="ALWAYS">
           <columns>
-            <TableColumn fx:id="mapPreviewColumn" text="%game.map"/>
-            <TableColumn fx:id="gameTitleColumn" text="%game.title"/>
-            <TableColumn fx:id="playersColumn" minWidth="37.0" text="%game.players"/>
-            <TableColumn fx:id="rankingColumn" text="%game.ranking"/>
-            <TableColumn fx:id="modsColumn" text="%game.mods"/>
+            <TableColumn fx:id="mapPreviewColumn" text="%game.map" />
+            <TableColumn fx:id="gameTitleColumn" text="%game.title" />
+            <TableColumn fx:id="playersColumn" minWidth="37.0" text="%game.players" />
+            <TableColumn fx:id="rankingColumn" text="%game.ranking" />
+            <TableColumn fx:id="modsColumn" text="%game.mods" />
           </columns>
           <columnResizePolicy>
-            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY"/>
+            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
           </columnResizePolicy>
         </TableView>
       </children>
