--- a/src/main/resources/themes/default/style.css
+++ b/src/main/resources/themes/default/style.css
@@ -331,6 +331,7 @@
 .status-bar {
   -fx-border-width: 1 0 0 0;
   -fx-border-color: -fx-box-border;
+  -fx-background-color: -fx-background;
 }
 
 .status-bar .text {
