--- a/src/main/resources/themes/default/games.fxml
+++ b/src/main/resources/themes/default/games.fxml
@@ -15,7 +15,9 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox fx:id="gamesRoot" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.faforever.client.game.GamesController">
+<VBox fx:id="gamesRoot" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" spacing="10.0"
+      xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1"
+      fx:controller="com.faforever.client.game.GamesController">
   <children>
     <HBox alignment="BASELINE_LEFT" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" spacing="10.0">
       <children>
@@ -25,9 +27,24 @@
     </HBox>
     <HBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" VBox.vgrow="ALWAYS">
       <children>
+        <TableView fx:id="gamesTable" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308"
+                   onMouseClicked="#onTableClicked" HBox.hgrow="ALWAYS">
+          <columns>
+            <TableColumn fx:id="mapPreviewColumn" text="%game.map"/>
+            <TableColumn fx:id="gameTitleColumn" text="%game.title"/>
+            <TableColumn fx:id="playersColumn" minWidth="37.0" text="%game.players"/>
+            <TableColumn fx:id="rankingColumn" text="%game.ranking"/>
+            <TableColumn fx:id="modsColumn" text="%game.mods"/>
+            <TableColumn fx:id="hostColumn" minWidth="0.0" text="%game.host"/>
+          </columns>
+          <columnResizePolicy>
+            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY"/>
+          </columnResizePolicy>
+        </TableView>
         <VBox fx:id="gamePreviewPanel" maxHeight="1.7976931348623157E308">
           <children>
-          <ImageView fx:id="mapImageView" fitWidth="256.0" pickOnBounds="true" preserveRatio="true" />
+            <ImageView fx:id="mapImageView" fitWidth="256.0" pickOnBounds="true" preserveRatio="true"
+                       styleClass="map-preview"/>
             <Label fx:id="gameTitleLabel" maxHeight="1.7976931348623157E308" styleClass="game-detail-title" text="&lt;Game title&gt;">
               <padding>
                 <Insets left="10.0" />
@@ -55,19 +72,13 @@
               </padding>
             </Label>
           </children>
+          <HBox.margin>
+            <Insets/>
+          </HBox.margin>
+          <padding>
+            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+          </padding>
         </VBox>
-        <TableView fx:id="gamesTable" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" onMouseClicked="#onTableClicked" HBox.hgrow="ALWAYS">
-          <columns>
-            <TableColumn fx:id="mapPreviewColumn" text="%game.map" />
-            <TableColumn fx:id="gameTitleColumn" text="%game.title" />
-            <TableColumn fx:id="playersColumn" minWidth="37.0" text="%game.players" />
-            <TableColumn fx:id="rankingColumn" text="%game.ranking" />
-            <TableColumn fx:id="modsColumn" text="%game.mods" />
-          </columns>
-          <columnResizePolicy>
-            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-          </columnResizePolicy>
-        </TableView>
       </children>
     </HBox>
   </children>
