--- a/src/main/resources/themes/default/style.css
+++ b/src/main/resources/themes/default/style.css
@@ -293,7 +293,7 @@
 }
 
 .main-menu-button:hover {
-  -fx-effect: dropshadow(gaussian, rgba(255,255,255,.4), 5, 0.8, 0, 0);
+  -fx-effect: dropshadow(gaussian, #ffffff66, 5, 0.8, 0, 0);
 }
 
 .username-button {
@@ -303,7 +303,7 @@
 }
 
 .username-button:hover {
-  -fx-effect: dropshadow(gaussian, rgba(255,255,255,.4), 5, 0.8, 0, 0);
+  -fx-effect: dropshadow(gaussian, #ffffff66, 5, 0.8, 0, 0);
 }
 
 .username-button > .label {
@@ -372,7 +372,7 @@
 
 .main-navigation > .toggle-button:selected {
   -fx-text-fill: -fx-light-text-color;
-  -fx-effect: dropshadow(gaussian, rgba(255,255,255,.4), 5, 0.8, 0, 0);
+  -fx-effect: dropshadow(gaussian, #ffffff66, 5, 0.8, 0, 0);
 }
 
 /***************** Notification button *****************/
@@ -399,7 +399,7 @@
 .persistent-notifications {
   -fx-background-color: -fx-background;
   -fx-background-radius: 5;
-  -fx-effect: dropshadow(gaussian, rgba(255,255,255,.4), 5, 0.8, 0, 0);
+  -fx-effect: dropshadow(gaussian, #ffffff66, 5, 0.8, 0, 0);
 }
 
 .no-notifications {
@@ -441,7 +441,7 @@
 .create-game-popup {
   -fx-background-color: -fx-background;
   -fx-background-radius: 5;
-  -fx-effect: dropshadow(gaussian, rgba(255,255,255,.4), 5, 0.8, 0, 0);
+  -fx-effect: dropshadow(gaussian, #ffffff66, 5, 0.8, 0, 0);
 }
 
 /***************** Tabs *****************/
@@ -470,10 +470,11 @@
     -fx-background-color: linear-gradient(to left, transparent, -fx-accent);
 }
 
-/***************** Window decoration *****************/
+/***************** Game detail *****************/
 
 .map-preview {
-  -fx-effect: dropshadow(gaussian, rgba(255,255,255,.4), 5, 0.8, 0, 0);
+  -fx-background: white;
+  -fx-effect: dropshadow(gaussian, #ffffff66, 5, 0.8, 0, 0);
 }
 
 /***************** Window decoration *****************/
@@ -539,7 +540,7 @@
   -fx-font-size: 1.3em;
 }
 
-.login-Icon {
+.login-icon {
  -fx-effect: dropshadow(gaussian, rgba(255,255,255,.2), 15, 0.8, 0, 0);
 }
 
