--- a/src/main/resources/themes/default/channel_tab.fxml
+++ b/src/main/resources/themes/default/channel_tab.fxml
@@ -7,13 +7,12 @@
 <?import javafx.scene.web.WebView?>
 
 <fx:root type="Tab" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1">
-  <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308">
+  <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="0.0" minWidth="0.0">
     <children>
       <SplitPane dividerPositions="0.9" focusTraversable="false" maxWidth="1.7976931348623157E308" VBox.vgrow="ALWAYS">
         <items>
           <WebView fx:id="messagesWebView" minHeight="-1.0" minWidth="-1.0" prefHeight="-1.0" prefWidth="-1.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-          <VBox maxHeight="1.7976931348623157E308" minWidth="250.0" prefWidth="250.0"
-                SplitPane.resizableWithParent="false">
+          <VBox maxHeight="1.7976931348623157E308" minWidth="250.0" prefWidth="250.0" SplitPane.resizableWithParent="false">
             <children>
               <TextField fx:id="userSearchTextField" promptText="%chat.searchPrompt" />
               <ScrollPane fitToWidth="true" focusTraversable="false" VBox.vgrow="ALWAYS">
