--- a/src/main/resources/themes/default/games.fxml
+++ b/src/main/resources/themes/default/games.fxml
@@ -15,9 +15,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox fx:id="gamesRoot" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" spacing="10.0"
-      xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1"
-      fx:controller="com.faforever.client.game.GamesController">
+<VBox fx:id="gamesRoot" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="0.0" minWidth="0.0" spacing="10.0" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.faforever.client.game.GamesController">
   <children>
     <HBox alignment="BASELINE_LEFT" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" spacing="10.0">
       <children>
@@ -25,60 +23,62 @@
         <CheckBox mnemonicParsing="false" onAction="#onShowPrivateGames" selected="true" text="%games.showPrivateGames" />
       </children>
     </HBox>
-    <HBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" VBox.vgrow="ALWAYS">
+    <HBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="0.0" minWidth="0.0" VBox.vgrow="ALWAYS">
       <children>
-        <TableView fx:id="gamesTable" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308"
-                   onMouseClicked="#onTableClicked" HBox.hgrow="ALWAYS">
+        <TableView fx:id="gamesTable" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="0.0" minWidth="0.0" onMouseClicked="#onTableClicked" HBox.hgrow="ALWAYS">
           <columns>
-            <TableColumn fx:id="mapPreviewColumn" text="%game.map"/>
-            <TableColumn fx:id="gameTitleColumn" text="%game.title"/>
-            <TableColumn fx:id="playersColumn" minWidth="37.0" text="%game.players"/>
-            <TableColumn fx:id="rankingColumn" text="%game.ranking"/>
-            <TableColumn fx:id="modsColumn" text="%game.mods"/>
-            <TableColumn fx:id="hostColumn" minWidth="0.0" text="%game.host"/>
+            <TableColumn fx:id="mapPreviewColumn" minWidth="2.0" text="%game.map" />
+            <TableColumn fx:id="gameTitleColumn" minWidth="2.0" text="%game.title" />
+            <TableColumn fx:id="playersColumn" minWidth="2.0" text="%game.players" />
+            <TableColumn fx:id="rankingColumn" minWidth="2.0" text="%game.ranking" />
+            <TableColumn fx:id="modsColumn" minWidth="2.0" text="%game.mods" />
+            <TableColumn fx:id="hostColumn" minWidth="2.0" text="%game.host" />
           </columns>
           <columnResizePolicy>
-            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY"/>
+            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
           </columnResizePolicy>
         </TableView>
-        <VBox fx:id="gamePreviewPanel" maxHeight="1.7976931348623157E308">
-          <children>
-            <ImageView fx:id="mapImageView" fitWidth="256.0" pickOnBounds="true" preserveRatio="true"
-                       styleClass="map-preview"/>
-            <Label fx:id="gameTitleLabel" maxHeight="1.7976931348623157E308" styleClass="game-detail-title" text="&lt;Game title&gt;">
-              <padding>
-                <Insets left="10.0" />
-              </padding>
-            </Label>
-            <Label fx:id="numberOfPlayersLabel" maxHeight="1.7976931348623157E308" text="&lt;Number of players&gt;">
-              <padding>
-                <Insets left="10.0" />
-              </padding>
-            </Label>
-            <Label fx:id="hosterLabel" maxHeight="1.7976931348623157E308" text="&lt;Hoster&gt;">
-              <VBox.margin>
-                <Insets top="10.0" />
-              </VBox.margin>
-              <padding>
-                <Insets left="10.0" />
-              </padding>
-            </Label>
-            <Label fx:id="gameModeLabel" maxHeight="1.7976931348623157E308" text="&lt;Game mode&gt;">
-              <VBox.margin>
-                <Insets top="10.0" />
-              </VBox.margin>
-              <padding>
-                <Insets left="10.0" />
-              </padding>
-            </Label>
-          </children>
-          <HBox.margin>
-            <Insets/>
-          </HBox.margin>
-          <padding>
-            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
-          </padding>
-        </VBox>
+            <ScrollPane>
+               <HBox.margin>
+                  <Insets />
+               </HBox.margin>
+               <content>
+              <VBox fx:id="gamePreviewPanel" maxHeight="1.7976931348623157E308" minHeight="0.0" minWidth="0.0">
+                <children>
+                  <ImageView fx:id="mapImageView" fitWidth="256.0" pickOnBounds="true" preserveRatio="true" styleClass="map-preview" />
+                  <Label fx:id="gameTitleLabel" maxHeight="1.7976931348623157E308" styleClass="game-detail-title" text="&lt;Game title&gt;">
+                    <padding>
+                      <Insets left="10.0" />
+                    </padding>
+                  </Label>
+                  <Label fx:id="numberOfPlayersLabel" maxHeight="1.7976931348623157E308" text="&lt;Number of players&gt;">
+                    <padding>
+                      <Insets left="10.0" />
+                    </padding>
+                  </Label>
+                  <Label fx:id="hosterLabel" maxHeight="1.7976931348623157E308" text="&lt;Hoster&gt;">
+                    <VBox.margin>
+                      <Insets top="10.0" />
+                    </VBox.margin>
+                    <padding>
+                      <Insets left="10.0" />
+                    </padding>
+                  </Label>
+                  <Label fx:id="gameModeLabel" maxHeight="1.7976931348623157E308" text="&lt;Game mode&gt;">
+                    <VBox.margin>
+                      <Insets top="10.0" />
+                    </VBox.margin>
+                    <padding>
+                      <Insets left="10.0" />
+                    </padding>
+                  </Label>
+                </children>
+                <padding>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                </padding>
+              </VBox>
+               </content>
+            </ScrollPane>
       </children>
     </HBox>
   </children>
