--- a/src/main/resources/themes/default/vault.fxml
+++ b/src/main/resources/themes/default/vault.fxml
@@ -4,7 +4,7 @@
 <?import java.lang.*?>
 <?import javafx.scene.control.*?>
 
-<TabPane fx:id="vaultRoot" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.faforever.client.vault.VaultController">
+<TabPane fx:id="vaultRoot" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="0.0" minWidth="0.0" tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.faforever.client.vault.VaultController">
   <tabs>
     <Tab text="%vault.maps">
       <content>
@@ -12,15 +12,15 @@
           <children>
             <TableView fx:id="mapTableView" VBox.vgrow="ALWAYS">
               <columns>
-                <TableColumn fx:id="nameColumn" minWidth="0.0" prefWidth="-1.0" text="%map.name"/>
-                <TableColumn fx:id="descriptionColumn" minWidth="0.0" prefWidth="-1.0" text="%map.description"/>
-                <TableColumn fx:id="playersColumn" minWidth="0.0" prefWidth="-1.0" text="%map.players"/>
-                <TableColumn fx:id="sizeColumn" minWidth="0.0" prefWidth="-1.0" text="%map.size"/>
-                <TableColumn fx:id="creatorColumn" minWidth="0.0" prefWidth="-1.0" text="%map.creator"/>
-                <TableColumn fx:id="ratingColumn" minWidth="0.0" prefWidth="-1.0" text="%map.rating"/>
-                <TableColumn fx:id="downloadsColumn" minWidth="0.0" prefWidth="-1.0" text="%map.downloads"/>
-                <TableColumn fx:id="playsColumn" minWidth="0.0" prefWidth="-1.0" text="%map.plays"/>
-                <TableColumn fx:id="versionColumn" minWidth="0.0" prefWidth="-1.0" text="%map.version"/>
+                <TableColumn fx:id="nameColumn" minWidth="0.0" prefWidth="-1.0" text="%map.name" />
+                <TableColumn fx:id="descriptionColumn" minWidth="0.0" prefWidth="-1.0" text="%map.description" />
+                <TableColumn fx:id="playersColumn" minWidth="0.0" prefWidth="-1.0" text="%map.players" />
+                <TableColumn fx:id="sizeColumn" minWidth="0.0" prefWidth="-1.0" text="%map.size" />
+                <TableColumn fx:id="creatorColumn" minWidth="0.0" prefWidth="-1.0" text="%map.creator" />
+                <TableColumn fx:id="ratingColumn" minWidth="0.0" prefWidth="-1.0" text="%map.rating" />
+                <TableColumn fx:id="downloadsColumn" minWidth="0.0" prefWidth="-1.0" text="%map.downloads" />
+                <TableColumn fx:id="playsColumn" minWidth="0.0" prefWidth="-1.0" text="%map.plays" />
+                <TableColumn fx:id="versionColumn" minWidth="0.0" prefWidth="-1.0" text="%map.version" />
               </columns>
               <columnResizePolicy>
                 <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
