--- a/src/main/resources/themes/default/enter_password.fxml
+++ b/src/main/resources/themes/default/enter_password.fxml
@@ -5,13 +5,11 @@
 <?import java.lang.*?>
 <?import javafx.scene.control.*?>
 
-<VBox fx:id="enterPasswordRoot" styleClass="enter-game-password" xmlns="http://javafx.com/javafx/8.0.40"
-      xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.faforever.client.game.EnterPasswordController">
+<VBox fx:id="enterPasswordRoot" styleClass="enter-game-password" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.faforever.client.game.EnterPasswordController">
   <children>
-    <TextField fx:id="passwordTextField" onAction="#onPasswordEntered" prefWidth="300.0"
-               promptText="%game.join.passwordHint"/>
+      <PasswordField fx:id="passwordTextField" prefWidth="300.0" promptText="%game.join.passwordHint" />
   </children>
-  <padding>
-    <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
-  </padding>
+   <padding>
+      <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+   </padding>
 </VBox>
