Transparent and searchable ladder

--- a/src/main/resources/themes/default/enter_password.fxml
+++ b/src/main/resources/themes/default/enter_password.fxml
@@ -7,7 +7,7 @@
 
 <VBox fx:id="enterPasswordRoot" styleClass="enter-game-password" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.faforever.client.game.EnterPasswordController">
   <children>
-      <PasswordField fx:id="passwordTextField" prefWidth="300.0" promptText="%game.join.passwordHint" />
+    <PasswordField fx:id="passwordTextField" prefWidth="300.0" promptText="%game.join.passwordPrompt"/>
   </children>
    <padding>
       <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
