Removing ladder slider; replacing with search

--- a/src/main/resources/themes/default/style.css
+++ b/src/main/resources/themes/default/style.css
@@ -474,7 +474,7 @@
   -fx-background-color: transparent;
 }
 
-/***************** Range Slider Fixes *****************/
+/***************** Range Slider *****************/
 
 .slider > .axis:bottom {
   -fx-padding : 50, 50, 50, 50;
