* Player stats * Fixing chat user names (using "real name" instead of "login")

--- a/src/main/resources/themes/default/style.css
+++ b/src/main/resources/themes/default/style.css
@@ -181,6 +181,9 @@
     -fx-stroke: derive(-fx-text-background-color, 40%);
 }
 
+.axis {
+    -fx-font-size: 1.2em;
+}
 
 /***************** Text field *****************/
 
