--- a/src/main/resources/themes/default/user_info_window.fxml
+++ b/src/main/resources/themes/default/user_info_window.fxml
@@ -9,56 +9,42 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<GridPane fx:id="userInfoRoot" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1"
-          fx:controller="com.faforever.client.chat.UserInfoWindowController">
+<GridPane fx:id="userInfoRoot" minHeight="100.0" minWidth="100.0" xmlns="http://javafx.com/javafx/8.0.40"
+          xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.faforever.client.chat.UserInfoWindowController">
    <columnConstraints>
       <ColumnConstraints hgrow="NEVER" minWidth="10.0" />
       <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" />
-      <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" prefWidth="100.0" />
+      <ColumnConstraints minWidth="10.0"/>
    </columnConstraints>
    <rowConstraints>
-      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="NEVER"/>
-      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="NEVER"/>
+      <RowConstraints minHeight="10.0" vgrow="NEVER"/>
+      <RowConstraints minHeight="10.0" vgrow="NEVER"/>
       <RowConstraints minHeight="10.0" vgrow="ALWAYS"/>
    </rowConstraints>
    <children>
-      <Label fx:id="usernameLabel" text="Username" GridPane.columnSpan="2147483647">
+      <Label fx:id="usernameLabel" text="&lt;Username&gt;" GridPane.columnSpan="2147483647">
          <font>
             <Font size="32.0" />
          </font>
       </Label>
-      <Label text="Switzerland" GridPane.columnIndex="1" GridPane.rowIndex="1">
+      <Label fx:id="countryLabel" text="&lt;Country&gt;" GridPane.columnIndex="1" GridPane.rowIndex="1">
          <GridPane.margin>
             <Insets left="5.0" />
          </GridPane.margin>
+         <graphic>
+            <ImageView fx:id="countryImageView" pickOnBounds="true" preserveRatio="true"/>
+         </graphic>
       </Label>
-      <ImageView fx:id="countryFlagImageView" fitHeight="16.0" fitWidth="16.0" pickOnBounds="true" preserveRatio="true"
-                 GridPane.rowIndex="1">
-         <image>
-         </image>
-      </ImageView>
-      <TabPane GridPane.columnSpan="2147483647" GridPane.rowIndex="2">
+      <TabPane tabClosingPolicy="UNAVAILABLE" GridPane.columnSpan="2147483647" GridPane.rowIndex="2">
          <tabs>
-            <Tab text="Skill">
+            <Tab text="%playerInfo.rating90Days">
                <content>
-                  <LineChart fx:id="rating90DaysChart" legendVisible="false" title="%playerInfo.rating90Days">
+                  <LineChart fx:id="rating90DaysChart" legendVisible="false">
                     <xAxis>
                        <NumberAxis fx:id="rating90DaysXAxis" side="BOTTOM"/>
                     </xAxis>
                     <yAxis>
-                      <NumberAxis side="LEFT" />
-                    </yAxis>
-                  </LineChart>
-               </content>
-            </Tab>
-            <Tab text="Skill history">
-               <content>
-                  <LineChart>
-                    <xAxis>
-                       <NumberAxis side="BOTTOM"/>
-                    </xAxis>
-                    <yAxis>
-                      <NumberAxis side="LEFT" />
+                       <NumberAxis fx:id="rating90DaysYAxis" side="LEFT"/>
                     </yAxis>
                   </LineChart>
                </content>
@@ -76,6 +62,6 @@
       </Button>
    </children>
    <padding>
-      <Insets bottom="14.0" left="14.0" right="14.0" top="32.0" />
+      <Insets bottom="5.0" left="5.0" right="5.0" top="32.0"/>
    </padding>
 </GridPane>
