--- a/src/main/resources/themes/default/channel_tab.fxml
+++ b/src/main/resources/themes/default/channel_tab.fxml
@@ -52,7 +52,8 @@
           </VBox>
         </items>
       </SplitPane>
-      <TextField fx:id="messageTextField" maxWidth="1.7976931348623157E308" onAction="#onSendMessage" promptText="%chat.messagePrompt" />
+      <TextField fx:id="messageTextField" maxWidth="1.7976931348623157E308" onAction="#onSendMessage"
+                 onKeyPressed="#onKeyPressed" promptText="%chat.messagePrompt"/>
     </children>
   </VBox>
 </fx:root>
