--- a/src/main/resources/themes/default/style.css
+++ b/src/main/resources/themes/default/style.css
@@ -361,18 +361,18 @@
   -fx-shape: "M0 1 L1 1 L.5 0 Z";
 }
 
-/***************** Transparent table *****************/
+/***************** Table *****************/
 
-.transparent-background-table {
+.table-view {
   -fx-control-inner-background: #FFFFFF00;
   -fx-control-inner-background-alt: #FFFFFF11;
 }
 
-.transparent-background-table .virtual-flow {
+.table-view > .virtual-flow {
   -fx-color: transparent;
 }
 
-.transparent-background-table .virtual-flow .scroll-bar > .thumb {
+.table-view > .virtual-flow .scroll-bar > .thumb {
   -fx-color: -fx-base;
 }
 
